# conduit-cli

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/scripts/: prune-prereleases.js
.github/workflows/: docker-publish.yml  release.yml  test.yml
cli/: Cargo.toml  build.rs
cli/proto/: api.proto
cli/src/: handler.rs  lib.rs  main.rs
cli/src/api/: config.rs  job.rs  mod.rs  network.rs
cli/src/opts/: job.rs  job_template.rs  network.rs
conduitup/: conduitup  install
proto/: api.proto
src/: api.rs  lib.rs  main.rs  types.rs  utils.rs
src/api/: config.rs  job.rs  job_template.rs  mod.rs  network.rs
src/opts/: job.rs  job_template.rs  login.rs  mod.rs  network.rs  organization.rs  user.rs
