[package]
name = "exfac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"

# cli
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "3.0.4"
uuid = { version = "1.1.2", features = ["v4"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
yansi = "0.5.1"
eyre = "0.6.8"
color-eyre = "0.6.2"
prost = "0.11.0"
prost-types = "0.11.1"

[build-dependencies]
vergen = "7.4.2"
prost = "0.11.0"
prost-build = "0.11.1"
