[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
webbrowser = "0.8.0"

tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"

# cli
clap = { version = "4.0", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "4.0"
uuid = { version = "1.1.2", features = ["v4"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
yansi = "0.5.1"
eyre = "0.6.8"
color-eyre = "0.6.2"
prost = "0.11.0"
prost-types = "0.11.1"
thiserror = "1.0.37"
axum = "0.5.16"
hyper = "0.14.20"
dirs-next = "2.0.0"

[build-dependencies]
vergen = "7.4.2"
prost = "0.11.0"
prost-build = "0.11.1"
